# chief-lp6

./: .gitignore  AppConfig.h  AudioChannel.cpp  AudioChannel.h  AudioEngine.cpp  AudioEngine.h  CMakeLists.txt  CMakeLists.txt.unused  CMakeSettings.json  Channel.cpp  Channel.h  ChannelStripComponent.cpp  ChannelStripComponent.h  Command.h  ContextMenuControls.h  CustomLookAndFeel.h  LevelMeterComponent.h  LoopEngine.cpp  LoopEngine.h  Main.cpp  MainComponent.cpp  MainComponent.h  Metronome.cpp  Metronome.h  MetronomeRoutingComponent.h  MidiLearnManager.cpp  MidiLearnManager.h  Phase3Example.cpp  PluginHostWrapper.cpp  PluginHostWrapper.h  PluginManagerComponent.cpp  PluginManagerComponent.h  PreferencesComponent.cpp  PreferencesComponent.h  RoutingComponent.cpp  RoutingComponent.h  ShowComponent.cpp  ShowComponent.h  ShowManager.cpp  ShowManager.h  (+11 more)
